Wed Aug 16 06:03:11 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* ace/Select_Reactor_Base.h: Make the notify_queue_lock_ in
	  ACE_Select_Reactor_Notify an ACE_SYNCH_MUTEX rather than an
 	  ACE_SYNCH_RW_MUTEX to be consistent. Thanks to Ivan Murphy for
 	  reporting this.	
  
Tue Aug 15 20:54:14 2000  Darrell Brunsch <brunsch@uci.edu>

        * ace/Logging_Strategy.cpp:
        * ace/Logging_Strategy.h:
        * ace/OS.i:
        * ace/SOCK_Dgram_Mcast_QoS.cpp:
        * ace/ace_wchar.h:

          Fixed miscellaneous wide character support problems.

Mon Aug 14 21:55:54 2000  Joe Hoffert  <joeh@cs.wustl.edu>

        * ace/OS.{h,i}:
          Added function typedefs for pace_signal for compiling
          ACE with PACE for LynxOS.

Fri Aug 11 17:49:36 2000  Steve Huston  <shuston@riverace.com>

        * ace/TP_Reactor.cpp: Add #include "ace/Thread.h" to pick up the
          definition of ACE_Thread::self ().

Fri Aug 11 16:24:13 2000  Shawn Hannan  <hannan@tango.cs.wustl.edu>

	* ace/OS.i: For VXWORKS, changed checks of errno against
	  S_objLib_OBJ_TIMEOUT to S_objLib_OBJ_UNAVAILABLE after calls
	  to semTake with timeout parameter set to NO_WAIT (i.e., 0).  
	  semTake will set errno to _UNAVAILABLE, not _TIMEOUT, if
 	  the semaphore is empty and the timeout parameter is 0.
	  Thanks to Peter Fischer <fischer@softec.de> for reporting
	  this.

Fri Aug 11 13:20:40 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

	* apps/gperf/src/gperf_lib.dsp: Changed the format for generated
	  debug info from C7 to "Program Database" to conform to rest of
	  the ACE project files.  Thanks to Espen Harlinn
	  <espen.harlinn@seamos.no> for reporting this.

Fri Aug 11 11:06:30 2000  David L. Levine <levine@cs.wustl.edu>

        * include/makeinclude/platform_osf1_4.0.GNU: moved
          -hidden /usr/lib/cmplrs/cxx/libcxxstd.a -non_hidden to end
          of link line by moving it from SOFLAGS to the end of LIBS.