@@ -1040,6 +1040,7 @@ Bruno Marconi <bmarconi@jetstream.com>
 Ken Childress <kchildre@uccs.jpl.nasa.gov>
 Michael Kramer <kramer@ave.ac.agit.de>
 Johhny Willemsen <johnny.willemsen@meco.nl>
+Jonathan Astle <JNASTLE@dera.gov.uk>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson.  Paul devised the recursive Makefile scheme that
